--- a/.champa_sensors.yaml
+++ b/.champa_sensors.yaml
@@ -1,4 +1,11 @@
 sensor:
+  # Create sensors for monitoring Weatherman remotely.
+  - platform: template
+    name: "Display Last Update"
+    device_class: timestamp
+    entity_category: "diagnostic"
+    id: display_last_update
+    
   - platform: homeassistant
     entity_id: sensor.grange_wind
     id: windnow
