--- a/carta-diggitale.yaml
+++ b/carta-diggitale.yaml
@@ -1,21 +1,11 @@
 esphome:
   name: carta-diggitale
   friendly_name: Carta Digitale
-
   on_boot:
-    priority: -100
+    priority: -10
     then:
-      #- delay: 10s
+      - delay: 10s
       - component.update: epaper  
-      - wait_until:
-          condition:
-            lambda: 'return id(data_updated) == true;'
-            # Wait a bit longer so all the items are received
-      - delay: 5s
-      - logger.log: "Initial sensor data received: Refreshing display..."
-      - lambda: 'id(initial_data_received) = true;'
-      - script.execute: update_screen
-
 esp32:
   board: esp32dev
   framework:
@@ -25,8 +15,8 @@ logger:
 
 wifi:
   ssid: !secret wifi_ssid
-  password: !secret wifi_password
-     
+  password: !secret wifi_password    
+
 api:
   encryption:
     key: !secret ha_api
@@ -34,73 +24,22 @@ api:
 ota:
   password: !secret ota
 
-button:
-  - platform: shutdown
-    name: "CartaDigitale - Shutdown"
-  - platform: restart
-    name: "CartaDigitale - Restart"
-  - platform: template
-    name: "CartaDigitale - Refresh Screen"
-    entity_category: config
-    on_press:
-      - script.execute: update_screen
-
-
 spi:
   clk_pin: GPIO13
   mosi_pin: GPIO14
-  #clk_pin: 5
-  #mosi_pin: 18  
-  id: waveshare_spi
-  
-# Global variables for detecting if the display needs to be refreshed. (Thanks @paviro!)
-globals:
-  - id: data_updated
-    type: bool
-    restore_value: no
-    initial_value: 'false'
-  - id: initial_data_received
-    type: bool
-    restore_value: no
-    initial_value: 'false'
-  - id: recorded_display_refresh
-    type: int
-    restore_value: yes
-    initial_value: '0'
-
-# Script for updating screen - Refresh display and publish refresh count and time. (Thanks @paviro!)
-script:
-  - id: update_screen
-    then:
-      #- deep_sleep.prevent: deep_sleep_1
-      - lambda: 'id(data_updated) = false;'
-      - component.update: epaper
-      - lambda: 'id(recorded_display_refresh) += 1;'
-      - lambda: 'id(display_last_update).publish_state(id(homeassistant_time).now().timestamp);'
-      #- deep_sleep.enter: deep_sleep_1
+  id: epaper_display
 
 time:
-  - platform: homeassistant
-    id: homeassistant_time
-    timezone: Europe/London
-    on_time:
-      - seconds: 0
-        minutes: /1
-        then:
-          - if:
-              condition:
-                lambda: 'return id(data_updated) == true;'
-              then:
-                - if:
-                    condition:
-                      binary_sensor.is_on: motion_kitchen
-                    then:
-                      - logger.log: "Sensor data updated and activity in home detected: Refreshing display..."
-                      - script.execute: update_screen
-                    else:
-                      - logger.log: "Sensor data updated but no activity in home - skipping display refresh."
-              else:
-                - logger.log: "No sensors updated - skipping display refresh."
+- platform: homeassistant
+  id: homeassistant_time
+  timezone: Europe/London
+  on_time:
+    - seconds: 0
+      minutes: /15
+      then:
+        - component.update: epaper
+
+
 
 sun:
   latitude: !secret my_lat
@@ -111,47 +50,9 @@ json:
 <<: !include .sensors.yaml
 <<: !include .fonts.yaml
 
-binary_sensor:
-  - platform: homeassistant
-    entity_id: binary_sensor.0x54ef441000772d70_occupancy
-    id: motion_kitchen
-
-  - platform: template
-    name: "OTA Mode"
-    id: ota_mode
-    internal: true
-    on_state:
-      - if:
-          condition:
-            binary_sensor.is_on: ota_mode
-          then:
-            - deep_sleep.prevent: deep_sleep_1
-  - platform: template
-    name: "Sleep Mode"
-    id: sleep_mode
-    internal: true
-    on_state:
-      - if:
-          condition:
-            binary_sensor.is_on: sleep_mode
-          then:
-            - deep_sleep.enter: deep_sleep_1
-
-            
-deep_sleep:
-  run_duration: 60s
-  sleep_duration: 30min
-  wakeup_pin:
-    number: 14
-    inverted: True
-    mode: INPUT_PULLUP
-  id: deep_sleep_1
-
-
 display:
   - platform: waveshare_epaper
     id: epaper  
-    spi_id: waveshare_spi
     cs_pin: GPIO15
     dc_pin: GPIO27
     busy_pin: GPIO25
@@ -159,7 +60,7 @@ display:
     model: 7.50inV2alt
     rotation: 90
     update_interval: never
-    reset_duration: 2ms
+    reset_duration: 4ms
 
     lambda: |-
       //ESP_LOGI("display", "Updating...");
@@ -196,8 +97,8 @@ display:
       std::string icomastbed = "\U000F0FD1";
       std::string icoattic = "\U000F112B";
       std::string icoserver = "\U000F1087";      
-      std::string icolgstudio = "\U000F0322";
-      std::string icoalstudio = "\U000F0AAB";
+      std::string icolgstudio = "\U000F0AAB";
+      std::string icoalstudio = "\U000F0322";
 
       std::string icotemp = "\U000F050F";
       std::string icohum = "\U000F058E";
@@ -449,4 +350,3 @@ display:
         if (id(homeassistant_time).now().day_of_week == 7){ 
           it.printf(Ycenter, jawY, id(jaweekfont), COLOR_OFF, TextAlign::CENTER, "土");
         }
-
